--- a/config/log4r.yml
+++ b/config/log4r.yml
@@ -1,26 +1,26 @@
 log4r_config:
   loggers:
-    - name: info_logger
+    - name: app_logger
       trace: "false"
       outputters:
-        - stderr
-        - info
+        - stdout
+        - logfile
   outputters:
     - type: StdoutOutputter
-      name: stderr
+      name: stdout
       level: DEBUG
       formatter:
         date_pattern: "%Y-%m-%d %H:%M:%S"
-        pattern: "(%d) [%l] %m"
+        pattern: "%d [%l] %m"
         type: PatternFormatter
 
     - type: FileOutputter
-      name: info
+      name: logfile
       level: INFO
       date_pattern: "%Y%m%d"
       trunc: "false"
-      filename: "#{HOME}/info.log"
+      filename: "#{HOME}/app_logger.log"
       formatter:
         date_pattern: "%Y-%m-%d %H:%M:%S"
-        pattern: "(%d) [%l] %m"
+        pattern: "%d [%l] %m"
         type: PatternFormatter
